--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "adv": "^0.1.5",
+    "ajv": "^8.17.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-loader-spinner": "^6.1.6",
+    "react-router-dom": "^7.1.3",
     "react-scripts": "5.0.1",
+    "react-spinner-loader": "^1.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
